feat:implemented account rest endpoints